# ROSLabDrohne

./: .gitignore  README.md
Code/Abstraction/: Abstraction.cpp  Abstraction.vcxproj  Abstraction.vcxproj.filters  CMakeLists.txt  package.xml
Code/Abstraction/include/Abstraction/: FixedPoint.h  FixedPoint.h~  Header.h  Ringbuffer.h  SafetyChecker.h  SafetyProvider.h  SafetyRequirement.h  SafetyTranslative.h  TimedValue.h  Timestamp.h  Unit.h  Value.h  Vector3D.h
Code/Abstraction/src/: SafetyProvider.cpp  TimedValue.cpp  Value.cpp  Vector3D.cpp
Code/Adapter/: Adapter.cpp  Adapter.sln  Adapter.vcxproj  Adapter.vcxproj.filters  CMakeLists.txt  CMakeLists.txt~  Transmitable_Mock.cpp  Transmitable_Mock.h  package.xml
Code/Adapter/Adapter/: Adapter.cpp  Adapter.vcxproj  Adapter.vcxproj.filters
Code/Adapter/Debug/: Adapter.vcxproj.FileListAbsolute.txt  CodeAnalysisResultManifest.txt
Code/Adapter/include/Adapter/: ActionAdapter.h  ActionAdapter_Mock.h  ActionDirection.h  Header.h  PoseBuilder.h  StateBuilder.h  StateHandler.h  Transmitable.h
Code/Adapter/src/: ActionAdapter.cpp  ActionAdapter_Mock.cpp  PoseBuilder.cpp  StateBuilder.cpp  StateHandler.cpp
Code/Application/: Application.cpp  Application.sln  Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt  package.xml  package.xml~
Code/Application/Application/: AccelToPos.cpp  AccelToPos.h  Application.aps  Application.cpp  Application.vcxproj  Application.vcxproj.filters  State.h  Transmitable.h  resource.h
Code/Application/Application/Debug/: Application.exe.recipe  vc142.idb
Code/Application/Debug/: Application.ilk
Code/Application/include/Application/: AccelToPos.h  AngVelToAng.h  ControllerMain.h  Header.h  PoseBuilder.h  PoseController.h  State.h  StateBuilder.h  StateHandler.h  StateTranslator.h  Transmitable.h  Wrapper3D.h
Code/Application/src/: AccelToPos.cpp  AngVelToAng.cpp  ControllerMain.cpp  PoseBuilder.cpp  PoseController.cpp  State.cpp  StateBuilder.cpp  StateHandler.cpp
Code/BagPlotter/: BagPlotter.vcxproj  BagPlotter.vcxproj.filters  CMakeLists.txt  DataLoader.cpp  DataLoader.h  package.xml
Code/BagPlotter/Data/: Test.txt
Code/BagPlotter/include/BagPlotter/: DataCollector.h  DataLoader.h  DataPersister.h
Code/BagPlotter/src/: BagPlotter_GeomTwist.cpp  BagPlotter_NavData_AccelVel.cpp  DataCollector.cpp  DataLoader.cpp  DataPersister.cpp  parrotPlotter.cpp
Code/Controller/: CMakeLists.txt  CMakeLists.txt~  Controller.cpp  Controller.vcxproj  Controller.vcxproj.filters  package.xml
Code/Controller/src/: Controllable.cpp  ControllerSystem.cpp  Controller_Basic.cpp  Controller_D.cpp  Controller_I.cpp  Controller_Input.cpp  Controller_P.cpp  Controller_PID.cpp  Controller_PT.cpp  Input.cpp  PoseController.cpp  TimedDifference.cpp
Code/Domain/: CMakeLists.txt  CMakeLists.txt~  Domain.cpp  Domain.sln  Domain.vcxproj  Domain.vcxproj.filters  package.xml
Code/Domain/Debug/: CodeAnalysisResultManifest.txt  Domain.ilk  Domain.vcxproj.FileListAbsolute.txt
Code/Domain/Domain/: Controllable.cpp  Controllable.h  ControllerSystem.cpp  ControllerSystem.h  Controller_D.cpp  Controller_D.h  Controller_I.cpp  Controller_I.h  Controller_Input.cpp  Controller_Input.h  Controller_P.cpp  Controller_P.h  Controller_PID.cpp  Controller_PID.h  Controller_PT.cpp  Controller_PT.h  Domain.cpp  Domain.vcxproj  Domain.vcxproj.filters  Outputable.cpp  Outputable.h  RingbufferItem.h  Timeable.cpp  Timeable.h  TimedValue.cpp  TimedValue.h  Timestamp.h  Unit.h  Value.cpp  Value.h  Vector3D.cpp  Vector3D.h
Code/Domain/src/: Controllable.cpp  ControllerSystem.cpp  Controller_Basic.cpp  Controller_D.cpp  Controller_I.cpp  Controller_Input.cpp  Controller_P.cpp  Controller_PID.cpp  Controller_PT.cpp  Input.cpp  Integral1.cpp  Integral2.cpp  Pose.cpp  SafetyProvider.cpp  TimedDifference.cpp  TimedValue.cpp  Value.cpp  Vector3D.cpp
Code/DroneController/: CMakeLists.txt  CMakeLists.txt~  DroneController.cpp  DroneController.vcxproj  DroneController.vcxproj.filters  package.xml
Code/DroneController/src/: Batteryable.cpp  DroneControlable.cpp  IMUState.cpp  IMUable.cpp  ImpactOK.cpp  ImpactWatcher.cpp  PercentageOK.cpp  Pose.cpp  PoseBuildable.cpp  PoseControlable.cpp  Rotor.cpp  Statusable.cpp  Thrustable.cpp  Timeable.cpp  TimeoutOK.cpp  VoltageOK.cpp  Watchdog.cpp
Code/PosControl/: ActionAdapter.h  CMakeLists.txt  Main.cpp  PosControl.cpp  PosControl.vcxproj  PosControl.vcxproj.filters  Simulant.cpp  StateCollector.h  StateHandler.cpp  package.xml
Code/PosControl/Debug/: CodeAnalysisResultManifest.txt  PosControl.exe.recipe  PosControl.vcxproj.FileListAbsolute.txt  vc142.idb
Code/PosControl/src/: AccelToPos.cpp  ActionAdapter.cpp  ActionAdapter_Mock.cpp  ActionTransmitter.cpp  AngleDetector.cpp  BagPlotter_GeomTwist.cpp  BagPlotter_NavData_AccelVel.cpp  Controllable.cpp  ControllerSystem.cpp  Controller_Basic.cpp  Controller_D.cpp  Controller_I.cpp  Controller_Input.cpp  Controller_P.cpp  Controller_PID.cpp  Controller_PT.cpp  Input.cpp  Inputable.cpp  Integral1.cpp  Integral2.cpp  Main.cpp  MainClass.cpp  ManualController.cpp  Output.cpp  PosBridge.cpp  PoseBuilder.cpp  RCTransmitter.cpp  RosBridge.cpp  State.cpp  StateBuilder.cpp  StateHandler.cpp  TestClass.cpp  TestLocalPos.cpp  TestLocalVel.cpp  TestMC.cpp  TestMC_Heartbeated.cpp  TestPosLocalAccel.cpp  TestPosLocalPos_MC.cpp  TestPosLocalVel.cpp  TestPose.cpp  (+12 more)
Code/coex/: CMakeLists.txt  README.txt  coex.cpp  coex.vcxproj  coex.vcxproj.filters  package.xml
Code/coex/src/: AccelReader.cpp  ArmNode.cpp  BatteryNode.cpp  Caller.cpp  Joystick.cpp  JoystickAxis.cpp  coexBattery.cpp  coexControl.cpp  coexMC.cpp  coexOrientation.cpp  coexRC.cpp  coexRC_Receiver.cpp  coexRC_Transmitter.cpp  coexState.cpp  coexTransmitable.cpp
Code/parrot/: CMakeLists.txt  package.xml  parrot.cpp  parrot.vcxproj  parrot.vcxproj.filters
Code/parrot/Debug/: CodeAnalysisResultManifest.txt  parrot.vcxproj.FileListAbsolute.txt
Code/parrot/src/: MessageTracker.cpp  parrotBattery.cpp  parrotControl.cpp  parrotIMU.cpp  parrotStatus.cpp  parrotTransmitter.cpp
(+477 files in other folders)
