<?xml version="1.0"?>
<package format="2">
  <name>DroneController</name>
  <version>0.0.0</version>
  <description>Package as Basic for any Combination of Drone and Controller</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="maag@todo.todo">maag</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
	<depend>roscpp</depend>
	<depend>rospy</depend>
	
	<depend>Domain</depend>
</package>
